Fix alignment of header cell

--- a/stylesheets/ember-table-minimal.less
+++ b/stylesheets/ember-table-minimal.less
@@ -306,7 +306,7 @@
   right: 0;
 }
 
-.ember-table-table-header-tree-cell .ember-table-content-container {
+.ember-table-table-header-tree-cell .ember-table-header-content-container {
   left: 20px;
 }
 
