--- a/stylesheets/ember-table.less
+++ b/stylesheets/ember-table.less
@@ -302,7 +302,7 @@
   right: 0;
 }
 
-.ember-table-table-header-tree-cell .ember-table-content-container {
+.ember-table-table-header-tree-cell .ember-table-header-content-container {
   left: 20px;
 }
 
